--- a/wp-content/themes/plumtr/style.css
+++ b/wp-content/themes/plumtr/style.css
@@ -15,6 +15,10 @@ body{
   font-family: 'Rubik', 'Lato', Arial, sans-serif !important;
 }
 
+.container{
+  margin-top: 60px !important;
+}
+
 
 ._well{
   /*height: auto !important;*/
