radio und check filters works

--- a/wp-content/themes/plumtr/style.css
+++ b/wp-content/themes/plumtr/style.css
@@ -1,6 +1,7 @@
 /*
 Theme Name: Plumtr
 */
+
 @import url('https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i');
 @import url('https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i');
 
@@ -34,7 +35,6 @@ small.cat-label{
   display: inline-block;
   background: #1abc9c;
   color: #eee;
-  
 }
 
 
@@ -42,8 +42,15 @@ small.cat-label{
   /*font-weight: 600;*/
   /*color: #c0392b;*/
   color: #16a085;
-  
-  
 }
+
+.activeCatFilter{
+  color: #1abc9c;
+}
+
+
+
+
+
 
 
